--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </div>
     <!---About me--->
-    <div class="container col-xxl-8 px-4 py-5">
+    <div class="container px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="profile-box col-lg-6">
             <img src="./image/Sample-profile.png" class="mx-auto d-block rounded-circle imgProfile" alt="Bootstrap Themes" height="350" loading="lazy">
